# stormhacks-2025

./: README.md  build-sites.sh  package-lock.json
tech/: index.html
web/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/.data/: live2d-models.json
web/scripts/: patch-vosk-worker.ts
web/src/: app.css  app.html  hooks.client.ts
web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
web/src-tauri/templates/: app.desktop
web/src/lib/: index.ts
web/src/lib/api/: chat.ts
web/src/lib/chat/: types.ts
web/src/lib/components/: Live2DPreview.svelte  ThemeSwitcher.svelte
web/src/lib/components/chat/: ChatInput.svelte  ChatMessages.svelte  ChatProviderControls.svelte  ChatSidebar.svelte  LlmSettingsModal.svelte  ModelPreviewPanel.svelte  TTSPlayer.svelte  (+2 more)
web/src/lib/live2d/: bus.ts  client.ts  local-store.ts  mouth.ts  types.ts
web/src/lib/llm/: client.ts  providers.ts  settings.ts
web/src/lib/polyfills/: fs.ts  source-map-js.ts  url.ts
web/src/lib/server/: llm.ts  settingsStore.ts
web/src/lib/shared/: llm.ts  providerStore.ts
web/src/lib/speech/: offline.ts
web/src/lib/stores/: theme.ts  toaster.ts
web/src/lib/tauri/: api.ts  cookies.ts
web/src/lib/tts/: client.ts
web/src/lib/types/: speech.d.ts  tar-js.d.ts
web/src/lib/utils/: markdown.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/settings/: +page.svelte
web/static/models/huohuo/: huohuo.model3.json
web/themes/: default.css  sfu.css
(+23 files in other folders)
