[package]
name = "stormhacks_desktop"
version = "0.0.1"
edition = "2021"
description = "StormHacks desktop client"
license = "MIT"
repository = ""
authors = ["StormHacks Team"]

[package.metadata.tauri.bundle]
identifier = "com.stormhacks.desktop"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
